addons/deploy-docs/templates/default-backend-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pkm
  namespace: geek-apps
  labels:
    app: nginx-pkm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pkm
  template:
    metadata:
      labels:
        app: nginx-pkm
    spec:
      containers:
      - name: nginx-pkm
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: nginx-pkm-pvc-vol
        - mountPath: "/etc/nginx/conf.d"
          name: default-nginx-conf-vol
      volumes:
      - name: nginx-pkm-pvc-vol
        persistentVolumeClaim:
          claimName: nginx-pvc
      - name: default-nginx-conf-vol
        configMap:
          name: default-nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pkm-service
  namespace: geek-apps
  labels:
    app: nginx
spec:
  clusterIP: None
  ports:
  - targetPort: 80
    port: 80
    name: httpport
  selector:
    app: nginx-pkm

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: geek-apps
spec:
  tls:
    - secretName: star.zizhizhan.com-tls
  defaultBackend:
    service: 
      name: nginx-pkm-service
      port:
        number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pkm-ingress
  namespace: geek-apps
spec:
  tls:
  - hosts:
      - pkm.zizhizhan.com
    secretName: star.zizhizhan.com-tls
  rules:
  - host: pkm.zizhizhan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-pkm-service
            port:
              number: 80
