addons/deploy-docs/templates/default-backend.deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-default-backend
  namespace: geek-apps
  labels:
    app: nginx-default-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-default-backend
  template:
    metadata:
      labels:
        app: nginx-default-backend
    spec:
      containers:
      - name: nginx-default-backend
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: nginx-pvc-vol
        - mountPath: "/etc/nginx/conf.d"
          name: default-backend-conf-vol
      volumes:
      - name: nginx-pvc-vol
        persistentVolumeClaim:
          claimName: default-backend-pvc
      - name: default-backend-conf-vol
        configMap:
          name: default-backend-conf

---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-service
  namespace: geek-apps
  labels:
    app: nginx-default-backend
spec:
  clusterIP: None
  ports:
  - targetPort: 80
    port: 80
    name: httpport
  selector:
    app: nginx-default-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dl-ingress
  namespace: geek-apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: star.zizhizhan.com-tls
  defaultBackend:
    service:
      name: default-backend-service
      port:
        number: 80
  rules:
  - host: dl.zizhizhan.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-backend-service
            port:
              number: 80
